# example-mapserver-rs

./: README.md
mapserver-rs/: Cargo.toml
mapserver-rs/src/: coordinates.rs  index.html  lib.rs  main.rs  mappool.rs
mapserver-sys/: .gitmodules  Cargo.toml  build.rs  wrapper.hpp
mapserver-sys/src/: lib.rs
