[package]
name = "mapserver-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
mapserver-sys = { path = "../mapserver-sys"}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "*"
hyper = { version = "*", features = ["full"] }
tokio = { version = "*", features = ["full"] }
tower = "*"
threadpool = "1"
crossbeam-channel = "*"
libc = "0.2"

[profile.release]
lto = true
